# snowy-examples

./: .gitignore  README.md
.github/workflows/: build-chat-with-your-data.yml
agent_examples/chat_with_your_data_copilotkit/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  next.config.ts  northwind.db  package-lock.json
agent_examples/copilotkit-chat-with-your-data/: CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
agent_examples/financial_coach_langchain/: .env.example  .gitignore  README.md  main.py  requirements.txt
agent_examples/gameclub_crewai/: .env.example  .gitignore  README.md  pyproject.toml
agent_examples/market_campaign_agent_sdk/: .env.example  README.md  agent.py  campaign_map.yaml  market_campaign_agent.py  pyproject.toml
crewai/: .env.example  README.md
crewai/scripts/: preparedata.py
fastmcp/: README.md  pyproject.toml  server.py
financial_coach/: .env.example  .gitignore  README.md  main.py  requirements.txt  test_questions.txt
financial_coach/agents/: __init__.py  coaching_analyzer.py  financial_coach.py
financial_coach/data/: create_sample_data.py
financial_coach/models/: schemas.py
financial_coach/tools/: snowleopard_tool.py
langchain-quickstart/: README.md  langchain_quickstart.py
langgraph-quickstart/: README.md  langgraph_quickstart.py
market_campaign_agent/: README.md  campaign_map.yaml  market_campaign_agent.py  pyproject.toml
pydantic/: README.md  agent.py  pyproject.toml
pydantic-ai/: README.md
vercel-ai/: cli.js  package.json  tool.js
(+77 files in other folders)
