[project]
name = "snowleopard-openai-example"
version = "0.1.1"
description = "A marketing campaign agent powered by Snow Leopard and OpenAI"
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"

dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0",
    "snowleopard>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
market-campaign-agent = "market_campaign_agent:main"

[tool.setuptools]
py-modules = ["market_campaign_agent", "agent"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"
